--- a/packages/components/message-dialog/src/message-dialog.scss
+++ b/packages/components/message-dialog/src/message-dialog.scss
@@ -4,6 +4,15 @@
   display: contents;
 }
 
+:host([inert]) {
+  display: none;
+
+  dialog,
+  dialog::backdrop {
+    transition: none;
+  }
+}
+
 dialog {
   background: var(--sl-elevation-surface-raised-default);
   border: 0;
@@ -30,6 +39,10 @@ dialog {
         opacity: 0;
       }
     }
+
+    @starting-style {
+      scale: 1.1;
+    }
   }
 
   &:focus-visible {
@@ -49,12 +62,6 @@ dialog {
     @supports not (overlay: auto) {
       transition-duration: 0s;
     }
-  }
-
-  // Enter animation
-  @starting-style {
-    display: flex;
-    scale: 1.1;
   }
 }
 
